test_regress/t/t_interface_mismodport_bad.out
%Error: t/t_interface_mismodport_bad.v:32:12: Can't find definition of 'bad' in dotted signal: 'isub.bad'
   32 |       isub.bad = i_value;   
      |            ^~~
        ... Known scopes under 'bad': <no instances found>
%Error: Exiting due to
